--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: Joseph "JPLC" Cassano
 email: joseph.cassano@jplc.ca
 description: >-
     The personal website of Joseph Cassano, who is sometimes known as "JPLC".
+markdown: kramdown
