--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,13 @@
 title: Joseph Cassano (JPLC)
 description: The personal website of Joseph Cassano (sometimes known as JPLC).
 email: joseph.cassano@jplc.ca
+emailWritten: joseph DOT cassano AT jplc DOT ca
 firstName: Joseph
 lastName: Cassano
 nickname: JPLC
+twitterName: @JPLC
+twitterUrl: https://twitter.com/JPLC
+gitHubName: MultiversalNomad
+gitHubUrl: https://github.com/MultiversalNomad
+gitHubGistName: MultiversalNomad
+gitHubGistUrl: https://gist.github.com/MultiversalNomad
