--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ emailWritten: joseph DOT cassano AT jplc DOT ca
 firstName: Joseph
 lastName: Cassano
 nickname: JPLC
-twitterName: @JPLC
+twitterName: >-
+    @JPLC
 twitterUrl: https://twitter.com/JPLC
 gitHubName: MultiversalNomad
 gitHubUrl: https://github.com/MultiversalNomad
