Pared down website. Kept the old structure in the files, but in terms of the end-user navigable site, I've pared things down. Also tried to use Liquid variables and stuff to help with generation.

--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,4 @@ emailWritten: joseph DOT cassano AT jplc DOT ca
 firstName: Joseph
 lastName: Cassano
 nickname: JPLC
-twitterName: >-
-    @JPLC
-twitterUrl: https://twitter.com/JPLC
-gitHubName: MultiversalNomad
-gitHubUrl: https://github.com/MultiversalNomad
-gitHubGistName: MultiversalNomad
-gitHubGistUrl: https://gist.github.com/MultiversalNomad
+linkedInUrl: https://www.linkedin.com/in/josephcassano
