Update _config.yml for ".well-known"
Added the include line for ".well-known".

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+include: [".well-known"]
 title: Joseph Cassano (JPLC)
 description: The personal website of Joseph Cassano (sometimes known as JPLC).
 email: joseph.cassano@jplc.ca
